--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
             src="img/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/'"
+            onclick="location.href='https://www.linkedin.com/in/vidhi-tawte-487185250?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app'"
           />
           <img
             src="img/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://github.com/Vidhitawte05'"
           />
         </div>
       </div>
@@ -270,7 +270,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">vidhit@gmail.com</a></p>
+          <p><a href="mailto:vidhitawte@gmail.com">vidhitawte@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -278,7 +278,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/vidhi-tawte-487185250?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">LinkedIn</a></p>
         </div>
       </div>
     </section>
